forms added for thought and reaction

--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "deep-thoughts",
+  "name": "mern-social-media",
   "version": "1.0.0",
-  "description": "### User Story As a user, I would like a social media type platform app to track thoughts. As a user I want a secured login to the application. I want to be able to post my thoughts and view other users' thoughts. As a user, I should be able to react, or reply to a thought. As a user I should be able to befriend other users.",
-  "main": "index.js",
+  "description": "",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed"
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Vinyldude8896/deep-thoughts.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Vinyldude8896/deep-thoughts/issues"
-  },
-  "homepage": "https://github.com/Vinyldude8896/deep-thoughts#readme",
   "devDependencies": {
-    "concurrently": "^7.4.0"
+    "concurrently": "^5.1.0"
   }
 }
